# bfc

./: CMakeLists.txt  bfc.cpp
bf-opt/: CMakeLists.txt  bf-opt.cpp
bfc/: AST.cpp  AST.h  CMakeLists.txt  Lexer.h  LowerToLLVM.cpp  MLIRGen.cpp  Parser.h  bfc.cpp
include/bf/: AST.h  BFDialect.h  BFDialect.td  BFOps.h  BFOps.td  BFPasses.h  BFPasses.td  BFTypes.h  BFTypes.td  CMakeLists.txt  MLIRGen.h  Parser.h  Passes.h
lib/bf/: BFConvertToLLVM.cpp  BFConvertToMemRef.cpp  BFConvertToTensors.cpp  BFDialect.cpp  BFOps.cpp  BFTypes.cpp  CMakeLists.txt
mlir/: Dialect.cpp  LowerToLLVM.cpp  MLIRGen.cpp
parser/: AST.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/bf/: basic.mlir  canonicalize-mod-index.mlir  combine-mod-data.mlir
